Fix table alignment

--- a/WebApp/WebContent/resources/style/newInstrument.css
+++ b/WebApp/WebContent/resources/style/newInstrument.css
@@ -140,4 +140,5 @@
 
 table.sampleData {
 	font-size: 0.75em;
+	margin: 0px !important;
 }
